Исправления, обновленная спека, format
