# src/models/tasks.ts
@@ -1,26 +1,44 @@
 import mongoose, { Document, Schema, Types } from 'mongoose';
 import { ICheckbox } from './common';
 
+export interface ITeachers {
+  id: string;
+  name: string;
+  link?: string;
+  isOnline: boolean;
+  room: string;
+  online?: string;
+}
+
 export interface ITask extends Document {
   title: string;
   subject: string;
-  teacher: string;
+  teachers: ITeachers[];
   isDone: boolean;
   deadline: Date;
   description: string;
-  checkboxes: ICheckbox[]
+  checkboxes: ICheckbox[];
   lessonId: Types.ObjectId;
 }
 
 const TaskSchema = new Schema<ITask>({
-  title: {type: String, required: true},
-  subject: {type: String, required: true},
-  teacher: {type: String, required: true},
-  isDone: {type: Boolean, required: true},
-  deadline: {type: Date, required: true},
-  description: {type: String, required: true},
+  title: { type: String, required: true },
+  subject: { type: String, required: true },
+  teachers: [
+    {
+      id: { type: String, required: true },
+      name: { type: String, required: true },
+      link: { type: String },
+      isOnline: { type: Boolean, required: true },
+      room: { type: String, required: true },
+      online: { type: String },
+    },
+  ],
+  isDone: { type: Boolean, required: true },
+  deadline: { type: Date, required: true },
+  description: { type: String, required: true },
   checkboxes: [{ type: Schema.Types.ObjectId, ref: 'Checkbox' }],
-  lessonId: { type: Schema.Types.ObjectId, ref: 'Lesson', required: true }
+  lessonId: { type: Schema.Types.ObjectId, ref: 'Lesson', required: true },
 });
 
 TaskSchema.pre<ITask>('save', function (next) {
